# chacun_son_jeu

./: .dockerignore  .gitignore  Dockerfile  GOOGLE_SHEETS_SETUP.md  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
analysis/: README.md  explore.py
app/: app_forms.py  app_select.py  questionnaire_app.py
data/: responses.csv  summary_results.csv
data/input/: collection.json  wishlist.json
data/preprocessing/: reponses_questionnaire.json
questionnaire-joueurs/: .gitignore  README.md  pyproject.toml
questionnaire-joueurs/data/: README.md  README.md:Zone.Identifier
questionnaire-joueurs/src/: scoring.py  storage.py
src/: api_data.py  collect.py  data.py  get_profil.py  storage.py  ui.py
src/game_selection/: api_data.py
