[project]
name = "questionnaire-joueurs"
version = "0.1.0"
description = "Questionnaire de profil motivationnel du joueur de jeux de société"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.35.0",
    "pandas>=2.0.0",
    "gspread>=6.2.1",
]

[project.scripts]
run-app = "app.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
